more-service-persistant-storage/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-log-persistent-svc
spec:
  type: ClusterIP
  selector:
    app: ping-log-persistent
  ports:
    - protocol: TCP
      port: 81
      targetPort: 3001
      name: ping-pong
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: log-output
